# BoxDreamer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml  requirements.txt  run.py  setup.py
configs/: test.yaml  train.yaml
configs/callbacks/: default.yaml
configs/datamodule/: local.yaml  test.yaml
configs/hydra/: default.yaml
configs/logger/: default.yaml
configs/model/: transformer.yaml
configs/model/loss/: default.yaml
configs/model/metrics/: default.yaml
configs/model/opt/: default.yaml
configs/model/vis/: default.yaml
configs/trainer/: default.yaml  test.yaml
scripts/: draw_plot_fig.py
scripts/tools/: draw_comparision_fig.py  draw_grid.py  latex_helper.py  make_safetensor.py  model_clean.py  model_rename.py  model_warpper.py  video_maker.py  vis_results.py
scripts/tools/cluster/: boxdreamer_scale_ft.sh  (+2 more)
src/datamodules/: BoxDreamer_datamodule.py
src/datasets/: __init__.py  base.py  batch_samplers.py  co3d.py  concat_dataset.py  custom.py  data_loader.py  linemod.py  linemodo.py  moped.py  objaverse.py  onepose.py  ycbv.py
src/demo/: cli.py  demo.py  gradio_demo.py  ov_det.py  preprocess_video.py  seg.py  utils.py
src/lightning/: BoxDreamer_lightning_model.py
src/loss/: loss.py  lossesV3.py
src/models/: BoxDreamerModel.py
src/reconstruction/: base.py  colmap.py  dataset.py  dust3r.py  main.py  mast3r.py  vggsfm.py
src/utils/: camera_transform.py  data_analyse.py  geo.py
tests/: conftest.py
tests/dataset/: test_base.py  test_co3d.py  test_linemod.py  test_objaverse.py  test_onepose.py
(+87 files in other folders)
